murmur-worked-03-01/6-mumble-rest-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: opr
    meta.helm.sh/release-namespace: opr-develop
  creationTimestamp: '2024-04-03T22:26:08Z'
  labels:
    app.kubernetes.io/instance: opr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mumble-rest
    helm.sh/chart: reflect-common-chart-2.0.5
  managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:helm.sh/chart: {}
        f:spec:
          f:internalTrafficPolicy: {}
          f:ports:
            .: {}
            k:{"port":8082,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: helm
      operation: Update
      time: '2024-04-04T20:19:12Z'
  name: mumble-rest
  namespace: opr-develop
  resourceVersion: '199680656'
  uid: 34deb483-2cdd-4370-8b39-37706cac4d4a
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app.kubernetes.io/instance: opr
    app.kubernetes.io/name: mumble-rest
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
