murmur-worked-03-01/7-murmur-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: opr
    meta.helm.sh/release-namespace: opr-develop
  creationTimestamp: '2024-04-03T22:26:08Z'
  labels:
    app.kubernetes.io/instance: opr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: murmur
    helm.sh/chart: reflect-common-chart-2.0.5
  managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:field.cattle.io/publicEndpoints: {}
      manager: rancher
      operation: Update
      time: '2024-04-03T22:26:08Z'
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:helm.sh/chart: {}
        f:spec:
          f:externalTrafficPolicy: {}
          f:internalTrafficPolicy: {}
          f:ports:
            .: {}
            k:{"port":6502,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:nodePort: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
            k:{"port":64738,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:nodePort: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
            k:{"port":64738,"protocol":"UDP"}:
              .: {}
              f:name: {}
              f:nodePort: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: helm
      operation: Update
      time: '2024-04-04T20:19:12Z'
  name: murmur
  namespace: opr-develop
  resourceVersion: '199680661'
  uid: dd06c7b8-e927-4d96-bd7d-5bd9c250ba50
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: murmur-ice
      nodePort: 30001
      port: 6502
      protocol: TCP
      targetPort: 6502
    - name: murmur-tcp
      nodePort: 30000
      port: 64738
      protocol: TCP
      targetPort: 64738
    - name: murmur-udp
      nodePort: 30000
      port: 64738
      protocol: UDP
      targetPort: 64738
  selector:
    app.kubernetes.io/instance: opr
    app.kubernetes.io/name: murmur
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
